--- a/doc/manual/entities.tex
+++ b/doc/manual/entities.tex
@@ -1,6 +1,9 @@
 \chapter{Main Entities} \label{chap:entities}
 
-In the following, the main entities of ViennaGrid are explained. The nomenclature essentially follows the convention from topology and can partly be found in other mesh libraries. Note that the purpose of this manual is not to give exact definitions from the field of geometry or topology, but rather to establish the link between abstract concepts and their representation in code within {\ViennaGrid}. First, geometrical objects are discussed, then topological objects and finally complexes of topological objects.
+In the following, the main entities of ViennaGrid are explained.
+The nomenclature essentially follows the convention from topology and can partly be found in other mesh libraries.
+Note that the purpose of this manual is not to give exact definitions from the field of geometry or topology, but rather to establish the link between abstract concepts and their representation in code within {\ViennaGrid}.
+First, geometrical objects are discussed, then topological objects and finally complexes of topological objects.
 
 \begin{figure}[tb]
 \centering
@@ -12,9 +15,10 @@ In the following, the main entities of ViennaGrid are explained. The nomenclatur
 
 \section{Points (Geometrical Objects)}
 The underlying space in {\ViennaGrid} is the $m$-dimensional Euclidian space $\mathbb{E}^m$, which is identified with the real coordinate space $\mathbb{R}^m$ in the following.
-A \emph{point} refers to an element $\vector x$ in $\mathbb{R}^m$ and does not carry any topological information. On the other hand, a point equivalently refers to the vector from the origin pointing to $\vector x$.
+A \emph{point} refers to an element $\vector x$ in $\mathbb{R}^m$ and does not carry any topological information.
+On the other hand, a point equivalently refers to the vector from the origin pointing to $\vector x$.
 
-Given a configuration class \lstinline|Config| for {\ViennaGrid} (cf.~Chap.~\ref{chap:meshconfig}), a point is defined and manipulated as follows:
+Given a configuration class \lstinline|Config| for {\ViennaGrid} (cf.~Chap.~\ref{chap:meshsetup}), a point is defined and manipulated as follows:
 \begin{lstlisting}
  using namespace viennagrid;
 
@@ -22,7 +26,7 @@ Given a configuration class \lstinline|Config| for {\ViennaGrid} (cf.~Chap.~\ref
  typedef result_of::point<Config>::type    PointType;
  // For a three-dimensional Cartesian space (double precision),
  // the type of the point is returned as
- // point_t<double, cartesian_cs<3> >
+ // spatial_point<double, cartesian_cs<3> >
 
  // Instantiate two points:
  PointType p1(0, 1, 2);
@@ -38,12 +42,12 @@ The operators \lstinline|+, -, *, /, +=, -=, *=| and \lstinline|/=| can be used 
 Aside from the standard Cartesian coordinates, {\ViennaGrid} can also handle polar, spherical and cylindrical coordinate systems.
 This is typically defined globally within the configuration class \lstinline|Config| for the whole mesh, and the meta-function in the previous snippet creates the correct point type. However, if no global configuration class is available, the point types can be obtained as
 \begin{lstlisting}
- typedef point<double, 1>                   CartesianPoint1d;
- typedef point<double, 2>                   CartesianPoint2d;
- typedef point<double, 2, polar_cs>         PolarPoint2d;
- typedef point<double, 3>                   CartesianPoint3d;
- typedef point<double, 3, spherical_cs>     SphericalPoint3d;
- typedef point<double, 3, cylindrical_cs>   CylindricalPoint3d;
+ typedef spatial_point<double, cartesian_cs<1> >  CartesianPoint1d;
+ typedef spatial_point<double, cartesian_cs<2> >  CartesianPoint2d;
+ typedef spatial_point<double, polar_cs>          PolarPoint2d;
+ typedef spatial_point<double, cartesian_cs<3> >  CartesianPoint3d;
+ typedef spatial_point<double, spherical_cs>      SphericalPoint3d;
+ typedef spatial_point<double, cylindrical_cs>    CylindricalPoint3d;
 \end{lstlisting}
 Conversions between the coordinate systems are carried out implicitly whenever a point is assigned to a point with a different coordinate system:
 \begin{lstlisting}
@@ -73,15 +77,24 @@ For additional algorithms acting on points, e.g.~\lstinline|norm()| for computin
 \section{Elements (Topological Objects)} \label{sec:ncells}
 While the point type defines the underlying geometry, elements define the topological connections among distinguished points. Each of these distinguished points is called a \emph{vertex} and describes the corners or intersection of geometric shapes. Vertices are often also referred to as the \emph{nodes} of a mesh.
 
-An \emph{edge} or \emph{line} is a line segment joining two vertices. Note that this is a topological characterization -- the underlying geometric space can have arbitrary dimension.
+An \emph{edge} or \emph{line} is a line segment joining two vertices.
+Note that this is a topological characterization -- the underlying geometric space can have arbitrary dimension.
 
-A \emph{cell} is an element of maximum topological dimension $N$ within the set of elements considered. The topological dimension of cells can be smaller than the underlying geometric space, which is for example the case in triangular surface meshes in three dimensions. Note that the nomenclature used among scientists is not entirely consistent: Some refer to topologically three-dimensional objects independent from the topological dimension of the full mesh as cells, which is not the case here.
+A \emph{cell} is an element of maximum topological dimension $N$ within the set of elements considered.
+The topological dimension of cells can be smaller than the underlying geometric space, which is for example the case in triangular surface meshes in three dimensions.
+Note that the nomenclature used among scientists is not entirely consistent:
+Some refer to topologically three-dimensional objects independent from the topological dimension of the full mesh as cells, which is not the case here.
 
-The surface of a cell consists of \emph{facets}, which are objects of topological dimension $N-1$. Some authors prefer the name \emph{face}, which is by other authors used to refer to objects of topological dimension two. Again, the definition of a facet refers in {\ViennaGrid} to topological dimension $N-1$.
+The surface of a cell consists of \emph{facets}, which are objects of topological dimension $N-1$.
+Some authors prefer the name \emph{face}, which is by other authors used to refer to objects of topological dimension two.
+Again, the definition of a facet refers in {\ViennaGrid} to topological dimension $N-1$.
 
-Boundary elements are elements which represent a boundary of another element. For example a triangle is a boundary element of a tetrahedron. But not only the direct boundaries are boundary elements in {\ViennaGrid}, also a boundary element of boundary element of an element is a boundary element of that element: a vertex and a line is a boundary element of a tetrahedron as well.
+Boundary elements are elements which represent a boundary of another element.
+For example a triangle is a boundary element of a tetrahedron.
+But not only the direct boundaries are boundary elements in {\ViennaGrid}, also a boundary element of a boundary element of an element is a boundary element of that element:
+for example, a vertex and a line are both boundary elements of a tetrahedron.
 
-\begin{table}[b]
+\begin{table}[tbp]
  \centering
  \renewcommand{\arraystretch}{1.3}
 \begin{tabular}{|l|l|l|l|l|}
@@ -100,25 +113,33 @@ Boundary elements are elements which represent a boundary of another element. Fo
 
 A brief overview of the corresponding meanings of vertices, edges, facets and cells is given in Tab.~\ref{tab:vertex-edge-facet-cell}. Note that edges have higher topological dimension than facets in the one-dimensional case, while they coincide in two dimensions. Refer also to Fig.~\ref{fig:entities}.
 
-{\ViennaGrid} supports 3 kinds of element types: simplices, hypercubes and special elements. Theoretically, simplices and hypercube with arbitrary dimension are supported but they are not explicitly defined. Special elements are polygons and piecewise linear complexes (PLCs). Each element type can be identified with its own tag. Tab.~\ref{tab:element-type-and-tags} gives an overview of all supported element types and their tags.
+{\ViennaGrid} supports three element families: simplices, hypercubes and special elements.
+Conceptually, {\ViennaGrid} is able to deal with simplices and hypercube of arbitrary dimensions,
+yet the explicit template instantiation are only defined up to three spatial dimensions.
+Special elements are polygons and piecewise linear complexes (PLCs).
 
-\begin{table}[b]
+To fully enable compiler optimizations, element types are identified during compilation time by so-called tags.
+Tab.~\ref{tab:element-type-and-tags} gives an overview of all supported element types and their tags.
+Internally, these tags are used for accessing static information such as the number of vertices of the respective element.
+Where possible, these numbers are accessed as constants at compile time, thus enabling full loop unrolling.
+
+\begin{table}[tbp]
  \centering
  \renewcommand{\arraystretch}{1.3}
-\begin{tabular}{|l|r|l|l|}
+\begin{tabular}{|l|c|l|l|}
 \hline
           & Dimension & Generic Tag & Element Tag \\
 \hline
- \textbf{Simplex}   & $n$ & \lstinline|simplex_tag<n>| & \lstinline|simplex_tag<n>| \\
- \textbf{Hypercube}   & $n$ & \lstinline|hypercube_tag<n>| & \lstinline|hypercube_tag<n>| \\
- \textbf{Vertex}   & $0$  & \lstinline|simplex_tag<0>|  & \lstinline|vertex_tag| \\
- \textbf{Line} or \textbf{Edge}   & $1$  & \lstinline|simplex_tag<1>|  & \lstinline|line_tag|, \lstinline|edge_tag| \\
- \textbf{Triangle}   & $2$  & \lstinline|simplex_tag<2>|  & \lstinline|triangle_tag| \\
- \textbf{Tetrahedron}   & $3$  & \lstinline|simplex_tag<3>|  & \lstinline|tetrahedron_tag| \\
- \textbf{Quadrilateral}   & $2$  & \lstinline|hypercube_tag<2>|  & \lstinline|quadrilateral_tag| \\
- \textbf{Hexahedron}   & $3$  & \lstinline|hypercube_tag<3>|  & \lstinline|hexahedron_tag| \\
- \textbf{Polygon}   & $2$  & \lstinline|polygon_tag|  & \lstinline|polygon_tag| \\
- \textbf{PLC}   & $2$  & \lstinline|plc_tag|  & \lstinline|plc_tag| \\
+ \textbf{Simplex}                 & $n$ & \lstinline|simplex_tag<n>|   & \lstinline|simplex_tag<n>| \\
+ \textbf{Hypercube}               & $n$ & \lstinline|hypercube_tag<n>| & \lstinline|hypercube_tag<n>| \\
+ \textbf{Vertex}                  & $0$ & \lstinline|simplex_tag<0>|   & \lstinline|vertex_tag| \\
+ \textbf{Line} or \textbf{Edge}   & $1$ & \lstinline|simplex_tag<1>|   & \lstinline|line_tag|, \lstinline|edge_tag| \\
+ \textbf{Triangle}                & $2$ & \lstinline|simplex_tag<2>|   & \lstinline|triangle_tag| \\
+ \textbf{Tetrahedron}             & $3$ & \lstinline|simplex_tag<3>|   & \lstinline|tetrahedron_tag| \\
+ \textbf{Quadrilateral}           & $2$ & \lstinline|hypercube_tag<2>| & \lstinline|quadrilateral_tag| \\
+ \textbf{Hexahedron}              & $3$ & \lstinline|hypercube_tag<3>| & \lstinline|hexahedron_tag| \\
+ \textbf{Polygon}                 & $2$ & \lstinline|polygon_tag|      & \lstinline|polygon_tag| \\
+ \textbf{PLC}                     & $2$ & \lstinline|plc_tag|          & \lstinline|plc_tag| \\
 \hline
 \end{tabular}
 \caption{Element types and their tags}
@@ -126,16 +147,15 @@ A brief overview of the corresponding meanings of vertices, edges, facets and ce
 \end{table}
 
 
-% For a parametric description of these objects it is more appropriate to switch \textbf{$n$-cells}, which are objects of topological dimension $n$. The terms \emph{vertex}, \emph{edge}, \emph{facet} and \emph{cell} thus refer to $0$-cell, $1$-cell, $N-1$-cell and $N$-cell respectively. The maximum topological dimension $N$ is in {\ViennaGrid} considered to be a parameter available at compile time, which allows to pick the correct $n$-cell type for the algorithms provided. Note that one can still use a run time dispatch at the cost of increased compilation times if the dimension of the mesh is only available at run time. More details can be found in Chapters \ref{chap:iterators} and \ref{chap:algorithms}.
-
-
 \section{Mesh}
-A \emph{mesh} $\Omega$ is the top level object in {\ViennaGrid} and is a container for its topological elements. There are no topological restrictions on the elements inside a mesh.
+A \emph{mesh} $\Omega$ is the top level object in {\ViennaGrid} and is a container for its topological elements.
+There are no topological restrictions on the elements inside a mesh.
 
-A typical use-case for a mesh is to store a cell complex. We characterize a cell complex as a collection of topological elements, such that the intersection of two elements (maybe of different type) $e_0$ and $e_1$  is another element $e_i$ from the cell complex.
+A typical use-case for a mesh is to store a cell complex.
+We characterize a cell complex as a collection of topological elements, such that the intersection of two elements (maybe of different type) $e_0$ and $e_1$ is another element $e_i$ from the cell complex.
 
-It should be noted that {\ViennaGrid} allows the use of conforming and non-conforming complexes. Here, a \emph{conforming} complex is characterized by the property that the intersection element $e_i$  from above is a boundary element from both of the element $e_0$ and the element $e_1$.
-
+{\ViennaGrid} fully supports conforming complexes and has partial support for non-conforming complexes.
+Here, a \emph{conforming} complex is characterized by the property that the intersection element $e_i$  from above is a boundary element from both of the element $e_0$ and the element $e_1$.
 If this is not the case, the complex is denoted \emph{non-conforming}, cf.~Fig.~\ref{fig:conformity}.
 
 \begin{figure}[tb]
@@ -152,17 +172,18 @@ If this is not the case, the complex is denoted \emph{non-conforming}, cf.~Fig.~
 
 \pagebreak
 
-The instantiation of a {\ViennaGrid} mesh object requires a configuration class \lstinline|Config|, as will be discussed in~Chapter~\ref{chap:typebasics}. Given such a class, the mesh type is retrieved and the mesh object constructed as
+The instantiation of a {\ViennaGrid} mesh object requires a configuration class \lstinline|Config|, as will be discussed in~Chapter~\ref{chap:meshsetup}.
+Given such a class, the mesh type is retrieved and the mesh object constructed as
 \begin{lstlisting}
  using namespace viennagrid;
 
  // Type retrieval, method 1: use meta-function (recommended)
- typedef result_of::mesh<Config>::type     MeshType;
+ typedef result_of::mesh<Config>::type   MeshType;
 
- // Type retrieval, method 2: direct (discouraged, may change in future versions)
- typedef mesh_t<Config>                    MeshType
+ // Type retrieval, method 2: direct (discouraged, may be changed)
+ typedef mesh<Config>                    MeshType;
 
- MeshType mesh; //create the mesh object
+ MeshType my_mesh; //create the mesh object
 \end{lstlisting}
 
 \section{Segmentation and Segment}
